--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
+sudo: false
 language: node_js
 node_js:
-  - "0.11"
-  - "0.10"
-before_script:
-  - npm install -g gulp
-script: gulp
+  - 'iojs'
+  - '0.12'
+  - '0.10'
